# audiobookplayer2

./: .env  .gitignore  LICENSE.md  audiobookplayer2.code-workspace
.github/workflows/: build_cross.yml
player/: Cargo.toml
player/src/: audio_player.rs  playlist_player.rs
player/tests/: audio_player_test.rs
src/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .taurignore  Cargo.toml  history.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: book_cmds.rs  library_cmds.rs  main.rs  player_cmds.rs  scan_cmds.rs  settings_cmds.rs  types.rs  utils.rs
src-tauri/src/player/: audio_player.rs  playlist_player.rs
src/public/: splashscreen.html
src/src/: App.svelte  app.css  audioplayer.ts  store.ts  types.ts  util.ts  vite-env.d.ts
src/src/lib/: About.svelte  BackgroundPlayer.svelte  Book.svelte  Header.svelte  ImportProgressModal.svelte  ImportProgressModalFileErrorGroup.svelte  Library.svelte  Loading.svelte  ProgressBar.svelte  Settings.svelte  SlimPlayer.svelte
