[package]
name = "audiobookplayer2"
version = "0.1.0"
# description = "A Tauri App"
# authors = ["you"]
# license = ""
# repository = ""
edition = "2021"
# rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
env_logger = "0.10.0"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
rodio = "0.16.0"
regex = "1.7.0"
confy = "0.5.1"
serde_derive = "1.0.148"
# audioplayer = { version = "0.0.0", path = "./player" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
