[package]
name = "audiobookplayer2"
version = "0.1.0"
# description = "A Tauri App"
# authors = ["you"]
# license = ""
# repository = ""
edition = "2021"
# rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }
env_logger = "0.10.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
regex = "1.8.1"
serde_derive = "1.0.162"
tauri-plugin-window-state = "0.1"
lofty = "0.12.1"
window-shadows = "0.2.1"
mp4 = "0.13.0"
log = "0.4.17"
dotenv = "0.15.0"
lazy_static = "1.4.0"
walkdir = "2.3.3"
once_cell = "1.17.1"
log4rs = "1.2.0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
